--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# --- Prisma generated code ---
+/src/generated/prisma/
+/prisma/generated/
+/**/generated/prisma/
+/**/generated/client/
