--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.1",
+    "@reduxjs/toolkit": "^2.9.0",
     "@shadcn/ui": "^0.0.4",
+    "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
+    "mysql2": "^3.15.2",
     "next": "15.5.5",
+    "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-redux": "^9.2.0",
     "recharts": "^3.2.1",
+    "sweetalert2": "^11.26.2",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
