--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.2",
     "recharts": "^3.2.1",
     "sweetalert2": "^11.26.2",
     "swiper": "^12.0.2"
