--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.24",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
+    "mongoose": "^8.19.2",
     "mysql2": "^3.15.2",
     "next": "15.5.5",
     "prisma": "^6.17.1",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
