--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# -----------------------------
+# Dependencies
+# -----------------------------
+node_modules/
+.pnp/
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -10,38 +12,63 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# -----------------------------
+# Testing & Coverage
+# -----------------------------
+coverage/
 
-# next.js
-/.next/
-/out/
+# -----------------------------
+# Next.js build output
+# -----------------------------
+.next/
+out/
 
-# production
-/build
+# -----------------------------
+# Production build
+# -----------------------------
+build/
 
-# misc
+# -----------------------------
+# Miscellaneous
+# -----------------------------
 .DS_Store
 *.pem
 
-# debug
+# -----------------------------
+# Logs
+# -----------------------------
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# -----------------------------
+# Environment files
+# -----------------------------
+# (Uncomment if you want to commit .env.example)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# vercel
-.vercel
+# -----------------------------
+# Vercel / Deployment
+# -----------------------------
+.vercel/
 
-# typescript
+# -----------------------------
+# TypeScript
+# -----------------------------
 *.tsbuildinfo
 next-env.d.ts
 
-# --- Prisma generated code ---
-/src/generated/prisma/
-/prisma/generated/
-/**/generated/prisma/
-/**/generated/client/
+# -----------------------------
+# Prisma generated code
+# -----------------------------
+# ⚠️ Keep your schema, migrations, and generated client!
+# Do NOT ignore the Prisma client if you deploy to a build service.
+# Ignore only transient artifacts.
+prisma/*.db
+prisma/dev.db
+prisma/test.db
