--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ out/
 # -----------------------------
 # Production build
 # -----------------------------
-build/
+# build/
 
 # -----------------------------
 # Miscellaneous
