--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
