--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "lucide-react": "^0.545.0",
     "mongoose": "^8.19.2",
     "mysql2": "^3.15.2",
-    "next": "15.5.5",
+    "next": "^16.0.10",
     "prisma": "^6.17.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
     "recharts": "^3.2.1",
