--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.19.2",
     "mysql2": "^3.15.2",
     "next": "^16.0.10",
+    "next-pwa": "^5.6.0",
     "prisma": "^6.17.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
