--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-select": "^5.10.2",
     "recharts": "^3.2.1",
     "sweetalert2": "^11.26.2",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
