--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
